--- a/App_PCC/App_PCC/App_PCC.csproj
+++ b/App_PCC/App_PCC/App_PCC.csproj
@@ -39,5 +39,8 @@
     <EmbeddedResource Update="Views\HomeDetail.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\NovoChamado.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
