--- a/App_PCC/App_PCC.Android/App_PCC.Android.csproj
+++ b/App_PCC/App_PCC.Android/App_PCC.Android.csproj
@@ -121,5 +121,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\ticket_2.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\icon_unifaat.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
