--- a/App_PCC/App_PCC.Android/App_PCC.Android.csproj
+++ b/App_PCC/App_PCC.Android/App_PCC.Android.csproj
@@ -123,5 +123,14 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\icon_unifaat.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\update.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\refresh.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\refresh_2.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
