--- a/App_PCC/App_PCC/App_PCC.csproj
+++ b/App_PCC/App_PCC/App_PCC.csproj
@@ -23,6 +23,9 @@
     <EmbeddedResource Update="Views\Consultar.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\Historico.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\Home.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
